--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Página de Aniversario</title>
   <link rel="stylesheet" href="styles.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
   <audio id="bg-music" loop autoplay>
@@ -17,15 +17,62 @@
   <div class="message">
     Cada día a tu lado es un regalo: tu risa ilumina mis mañanas, tu abrazo calma mis miedos y tu cariño hace latir más fuerte mi corazón. Gracias por ser mi cómplice, mi refugio y mi inspiración constante. Te amo hoy y siempre.
   </div>
+
   <div class="typewriter">
-  <p>Mi amor, cada momento contigo es un regalo que la vida me dio...</p>
-</div>
+    <p>Mi amor, cada momento contigo es un regalo que la vida me dio...</p>
+  </div>
 
   <section class="gallery">
-    <img src="ruta/a/foto1.jpg" alt="Foto 1" />
-    <img src="ruta/a/foto2.jpg" alt="Foto 2" />
-    <img src="ruta/a/foto3.jpg" alt="Foto 3" />
-    <img src="ruta/a/foto4.jpg" alt="Foto 4" />
+    <img src="img/1.jpg" alt="Foto 1" />
+    <img src="img/2.jpg" alt="Foto 2" />
+    <img src="img/3.jpg" alt="Foto 3" />
+    <img src="img/4.jpg" alt="Foto 4" />
+    <img src="img/5.jpg" alt="Foto 5" />
+    <img src="img/6.jpg" alt="Foto 6" />
+    <img src="img/7.jpg" alt="Foto 7" />
+    <img src="img/8.jpg" alt="Foto 8" />
+    <img src="img/9.jpg" alt="Foto 9" />
+    <img src="img/10.jpg" alt="Foto 10" />
+    <img src="img/11.jpg" alt="Foto 11" />
+    <img src="img/12.jpg" alt="Foto 12" />
+    <img src="img/13.jpg" alt="Foto 13" />
+    <img src="img/14.jpg" alt="Foto 14" />
+    <img src="img/15.jpg" alt="Foto 15" />
+    <img src="img/16.jpg" alt="Foto 16" />
+    <img src="img/17.jpg" alt="Foto 17" />
+    <img src="img/18.jpg" alt="Foto 18" />
+    <img src="img/19.jpg" alt="Foto 19" />
+    <img src="img/20.jpg" alt="Foto 20" />
+    <img src="img/21.jpg" alt="Foto 21" />
+    <img src="img/22.jpg" alt="Foto 22" />
+    <img src="img/23.jpg" alt="Foto 23" />
+    <img src="img/24.jpg" alt="Foto 24" />
+    <img src="img/25.jpg" alt="Foto 25" />
+    <img src="img/26.jpg" alt="Foto 26" />
+    <img src="img/27.jpg" alt="Foto 27" />
+    <img src="img/28.jpg" alt="Foto 28" />
+    <img src="img/29.jpg" alt="Foto 29" />
+    <img src="img/30.jpg" alt="Foto 30" />
+    <img src="img/31.jpg" alt="Foto 31" />
+    <img src="img/32.jpg" alt="Foto 32" />
+    <img src="img/33.jpg" alt="Foto 33" />
+    <img src="img/34.jpg" alt="Foto 34" />
+    <img src="img/35.jpg" alt="Foto 35" />
+    <img src="img/36.jpg" alt="Foto 36" />
+    <img src="img/37.jpg" alt="Foto 37" />
+    <img src="img/38.jpg" alt="Foto 38" />
+    <img src="img/39.jpg" alt="Foto 39" />
+    <img src="img/40.jpg" alt="Foto 40" />
+    <img src="img/41.jpg" alt="Foto 41" />
+    <img src="img/42.jpg" alt="Foto 42" />
+    <img src="img/43.jpg" alt="Foto 43" />
+    <img src="img/44.jpg" alt="Foto 44" />
+    <img src="img/45.jpg" alt="Foto 45" />
+    <img src="img/46.jpg" alt="Foto 46" />
+    <img src="img/47.jpg" alt="Foto 47" />
+    <img src="img/48.jpg" alt="Foto 48" />
+    <img src="img/49.jpg" alt="Foto 49" />
+    <img src="img/50.jpg" alt="Foto 50" />
   </section>
 
   <div class="letter-container">
@@ -37,19 +84,46 @@
     </div>
   </div>
 
- <svg id="flower" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-  <g fill="#c77dff" opacity="0.6"> <!-- pétalos lilas -->
-    <circle cx="100" cy="60" r="30"/>
-    <circle cx="60" cy="100" r="30"/>
-    <circle cx="140" cy="100" r="30"/>
-    <circle cx="100" cy="140" r="30"/>
-    <circle cx="100" cy="100" r="25" fill="#9d4edd"/> <!-- centro púrpura -->
-  </g>
-</svg>
+  <svg id="flower" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+    <g fill="#c77dff" opacity="0.6">
+      <circle cx="100" cy="60" r="30"/>
+      <circle cx="60" cy="100" r="30"/>
+      <circle cx="140" cy="100" r="30"/>
+      <circle cx="100" cy="140" r="30"/>
+      <circle cx="100" cy="100" r="25" fill="#9d4edd"/>
+    </g>
+  </svg>
 
   <canvas id="stars"></canvas>
   <div id="floating-flowers-container"></div>
   <div id="contador-dias" class="contador"></div>
+
+  <!-- 🎵 Controles de música personalizados -->
+  <div class="music-controls">
+    <button id="play">▶️</button>
+    <button id="pause">⏸️</button>
+    <input id="volume" type="range" min="0" max="1" step="0.01" value="1">
+  </div>
+
+  <div id="photo-modal" class="modal">
+    <span class="close">&times;</span>
+    <img class="modal-content" id="modal-img">
+    <div class="modal-controls">
+      <button id="prev-photo">⟨</button>
+      <button id="next-photo">⟩</button>
+    </div>
+  </div>
+
+  <div class="gift-section">
+    <h2 class="gift-title">🎁 ¡Tu regalo sorpresa!</h2>
+    <div class="gift-card">
+      <div class="gift-icon">🌹</div>
+      <div class="gift-message">¡Haz clic en los botones para descubrir tu regalo especial!</div>
+      <button class="gift-btn" onclick="showConfetti(); window.open('pdf/331824-QET.pdf', '_blank')">Ver parte 1</button>
+      <button class="gift-btn" onclick="showConfetti(); window.open('pdf/331825-QET.pdf', '_blank')">Ver parte 2</button>
+    </div>
+    <canvas id="confetti-canvas"></canvas>
+  </div>
 
   <script src="script.js"></script>
 </body>
