--- a/index.html
+++ b/index.html
@@ -79,7 +79,21 @@
     <div class="envelope" onclick="openLetter()">
       <div class="letter">
         <p>Mi amor: abrí esto para leer algo especial...</p>
-        <p class="hidden-message">Gracias por tanto. Eres lo mejor que me ha pasado en la vida. 💌</p>
+        <p class="hidden-message">Mi amor,
+
+Hoy celebramos nuestro primer año juntos, y no hay mejor momento para recordarte lo muchísimo que significas para mí. Desde que llegaste a mi vida, cada día a tu lado se ha convertido en un regalo lleno de luz y felicidad.
+
+Eres la mujer más maravillosa que he conocido: tu sonrisa ilumina mis mañanas y tus abrazos calman cualquier incertidumbre. Cuando me miras, siento que el mundo se detiene y mi corazón late con fuerza, agradecido por tenerte. Tus caricias despiertan en mí un sentimiento tan profundo e indescriptible que solo tú sabes provocar.
+
+Laura, gracias por cada instante compartido: por reír juntos, por apoyarnos en los días difíciles y por soñar de la mano con un futuro lleno de esperanza. Tu ternura y tu alegría son el motor que impulsa mi vida. Por ti, daría todo lo que soy, porque tu felicidad es mi mayor tesoro.
+
+En este primer aniversario, quiero prometerte que seguiré esforzándome cada día por ser el hombre que mereces, dispuesto a acompañarte en cada paso, celebrar tus triunfos y sostenerte en tus desafíos. Anhelo continuar construyendo recuerdos inolvidables contigo: viajes y pequeños detalles que nos acerquen aún más.
+
+Te amo con toda mi alma y mi deseo más profundo es que juntos disfrutemos de muchos años más, repletos de amor, complicidad y sueños compartidos. Gracias por convertir mi vida en un lugar mejor. Feliz primer aniversario, mi vida.
+
+Con todo mi amor,
+
+ 💌</p>
       </div>
     </div>
   </div>
